--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -103,21 +103,21 @@ span
     height:65%;
     width: 32%;
     font-weight: bold;
-    border: 2px solid #e3f2fd;
+    border: 2px solid rgba(255, 255, 255, 0.7);
     border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #e3f2fd;
+    background-color: rgba(255, 255, 255, 0.7);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     gap: 0.5em;
 }
 
 .signIn-Nav button:hover
 {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: #e3f2fd;
     transition: all .7s ease-in-out;
-    border: rgba(255, 255, 255, 0.7);
+    border: #e3f2fd;
 }
 
 .signIn-Nav .icon
