--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5px;
+  /* padding: 5px; */
 }
 
 main
@@ -26,4 +26,13 @@ main
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media only screen and (max-width: 740px)
+{
+  main
+  {
+    justify-content: start;
+    align-items: start;
+  }
 }
