--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: start;
+    padding-left: 20px;
 }
 
 .logo .icon
@@ -38,7 +39,7 @@
     width: 100%;
     height: 90%;
     display: flex;
-    /* align-items: end; */
+    align-items: center;
     justify-content: center;
     gap: 0.3em;
 }
@@ -86,6 +87,7 @@ span
     justify-content: center;
     align-items: center;
     gap: 0.2em;
+    /* background-color: #46f407; */
 }
 
 .signIn-Nav
@@ -95,22 +97,28 @@ span
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2.5em;
+    gap: 3.6em;
 }
 
 .signIn-Nav button
 {
     height:65%;
-    width: 32%;
+    width: 30%;
     font-weight: bold;
     border: 2px solid rgba(255, 255, 255, 0.7);
-    border-radius: 15px;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.7);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     gap: 0.5em;
+}
+
+.signIn-Nav button:focus
+{
+    background-color: #e3f2fd;
+    border: 2px solid #e3f2fd;
 }
 
 .signIn-Nav button:hover
@@ -136,13 +144,11 @@ span
     align-items: center;
 }
 
+
+
+
 @media only screen and (max-width: 740px) 
-{
-  .sign-in
-  {
-    justify-content: start;
-  }
-  
+{ 
   .logo
   {
     height: 10%;
@@ -157,9 +163,8 @@ span
 
   .welcome-message
   {
-    width: 100%;
+    width: 95%;
     height: 40%;
-    justify-content: end;
     align-items: center;
   }
 
@@ -170,15 +175,15 @@ span
 
   .slogan
   {
-    width: 100%;
+    width: 95%;
     height: 60%;
     align-items: center;
   }
 
   .slogan img
   {
-    width: 40%;
-    height: 80%;
+    width: 50%;
+    height: 100%;
   }
 
   .login-box
@@ -187,13 +192,24 @@ span
     width: 100%;
   }
 
-  /* .signIn-Nav
+  .signIn-Nav
   {
     height: 25%;
-  } */
+    width: 100%;
+    justify-content: center;
+  }
 
   .signIn-Nav button 
   {
     font-size: auto;
   }
+
+  .signIn-form
+{
+    height: 100%;
+    width: 100%;
+}
+
+
+  
 }
