--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -8,6 +8,7 @@
     align-items: end;
     gap: 0.7em;
     padding: 10px;
+    overflow: hidden;
 }
 
 .menu-box
@@ -116,6 +117,7 @@
     flex-direction: column;
     align-items: center;
     gap: 0.5em;
+    overflow: hidden;
 }
 
 .searchNav
@@ -218,6 +220,7 @@
     justify-content: center;
     align-items: center;
     gap: 0.6em;
+    overflow: hidden;
 }
 
 .pending
@@ -232,6 +235,7 @@
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.08);
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
 .title
@@ -258,6 +262,37 @@
     overflow-y: auto;
 }
 
+.tasks::-webkit-scrollbar {
+    width: 12px;
+    
+  }
+  
+  .tasks::-webkit-scrollbar-track {
+    background: #f0f0f0;
+    border-radius: 10px;
+  }
+  
+  .tasks::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    border: 3px solid #f0f0f0;
+  }
+  
+  .tasks::-webkit-scrollbar-thumb:hover {
+    background-color: #e70606;
+  }
+  
+  /* For Firefox */
+  .tasks {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f0f0f0;
+  }
+  
+  /* For Internet Explorer and Edge */
+  .tasks {
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+  }
+
 
 .completed
 {
@@ -270,6 +305,7 @@
     gap: 0.1em;
     border-radius: 5px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
 .completed .title
