--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -65,11 +65,11 @@
 
 .middle
 {
-    width: 90%;
-    height: 50%;
+    width: 100%;
+    height: 80%;
     border-radius: 5px;
     /* box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); */
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: inherit;
 }
 
 .bottom
@@ -160,7 +160,6 @@
     border-radius: 5px;
     border: #00e676;
     background-color: #00e676;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     font-size: 70%;
     display: flex;
     justify-content: center;
@@ -180,7 +179,7 @@
 {
     font-size: 16px;
     font-weight: bold;
-    color: blue;
+    color: red;
 }
 
 .circle
@@ -191,7 +190,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    padding-right: 5px;
 }
 
 .circle .icon
