--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -96,19 +96,10 @@
     align-items: center;
 }
 
-.text h2
+.text img
 {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-.text h3
-{
-    display: flex;
-    align-items: center;
-    font-size: 70%;
-    font-weight: light;
+    width: 100%;
+    height: 70%;
 }
 
 ::placeholder
@@ -159,8 +150,8 @@
 .searchNav input
 {
     padding: 0 5px;
-    width: 25.5%;
-    height: 70%;
+    width: 20%;
+    height: 55%;
     outline: none;
     border: 2px solid black;
     border-radius: 5px;
@@ -183,8 +174,8 @@
 
 .profile button
 {
-    height: 90%;
-    width: 55%;
+    height: 70%;
+    width: 45%;
     border-radius: 5px;
     border: #00e676;
     background-color: #00e676;
@@ -226,7 +217,7 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
-    color: #607d8b;
+    color: black;
 }
 
 .circle:hover
