--- a/src/components/UserPopup.css
+++ b/src/components/UserPopup.css
@@ -1,5 +1,6 @@
 /* UserPopup.css */
-.popup-overlay {
+.popup-overlay 
+{
     position: fixed;
     top: 0;
     left: 0;
@@ -9,19 +10,39 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
   
-  .popup-content {
-    background: white;
+.popup-content 
+{
+    background: #eceff1;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
-  }
+}
   
-  .popup-content button {
+.popup-content button 
+{
     position: absolute;
-    top: 10px;
-    right: 10px;
-  }
+    top: 2px;
+    right: 2px;
+    background-color: #eceff1;
+    border: none;
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    color: red;
+    cursor: pointer;
+    font-size: 25px;
+    transform: rotate(45deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content button:hover 
+{
+    background-color: #cfd8dc;
+    transition: all .5s ease-in-out;
+}
   
