--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -74,34 +74,6 @@
     background-color: inherit;
 }
 
-.bottom
-{
-    height: 8%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-
-.text
-{
-    display: flex;
-    width: 90%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.text img
-{
-    width: 100%;
-    height: 50%;
-}
-
 ::placeholder
 {
     font-size: 100%;
@@ -271,7 +243,6 @@
 {
     width: 100%;
     height: 93%;
-    /* display: grid; */
     overflow-y: auto;
     padding: 5px 0;
 }
@@ -334,3 +305,119 @@
     border-top: 2px solid #2196f3;
 }
 
+
+@media only screen and (max-width: 740px) 
+{
+    .dashboard
+    {
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .menu-box
+    {
+        flex-direction: row;
+        width: 98%;
+        height: 7%;
+        gap: 0.5em;
+    }
+
+    .top
+    {
+        flex-direction: row;
+        gap: 0.3em;
+        justify-content: space-between;
+        height: 70%;
+        width: 50%;
+    }
+
+    .top .logo
+    {
+        height: 98%;
+        width: 50%;
+        justify-content: start;
+        padding-left: 0;
+    }
+    .menu
+    {
+        height: 98%;
+        width: 50%;
+    }
+
+    .menu button 
+    {
+        font-size: 50%;
+    }
+    .middle
+    {
+        flex-direction: row;
+        background-color: blue;
+        width: 30%;
+        height: 70%;
+    }
+
+    .bottom
+    {
+        width: 20%;
+        height: 70%;
+    }
+
+    .to-do-box
+    {
+        width: 98%;
+        height: 93%;
+    }
+
+    .searchNav
+    {
+        width: 98%;
+        height: 6%;
+        align-items: center;
+    }
+
+    .searchNav #search:focus
+    {
+        border-bottom: 3px solid rgb(0, 0, 0);
+    }
+
+    .searchNav .profile
+    {
+        width: 50%;
+    }
+
+    .profile button 
+    {
+        height: 90%;
+        width: 40%;
+        font-size: 60%;
+    }
+
+    .circle
+    {
+        width: 25px;
+        height: 25px;
+    }
+
+
+    .to-do-main
+    {
+        flex-direction: column;
+        width: 98%;
+        height: 94%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .pending
+    {
+        width: 100%;
+        height: 50%;
+    }
+
+    .completed
+    {
+        width: 100%;
+        height: 50%;
+    }
+}
