--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -105,13 +105,13 @@ span
     height:65%;
     width: 30%;
     font-weight: bold;
-    border: 2px solid #ede7f6;
-    border-radius: 10px;
+    border: 2px solid rgba(255, 255, 255, 0.7);
+    border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ede7f6;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     gap: 0.5em;
 }
 
