--- a/src/components/signUpPopup.css
+++ b/src/components/signUpPopup.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 3%;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
 .signUpPopup .title
@@ -28,7 +28,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    gap: 1em;
+    gap: .2em;
 }
 
 .signUpPopup input
@@ -46,16 +46,15 @@
 {
     width: 30%;
     height: 17%;
-    background-color: #e3f2fd;
+    background-color: rgba(255, 255, 255, 0.7);
     border: none;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
     border-radius: 7%;
     font-weight: bold;
 }
 
 .signUpPopup button:hover
 {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: #e3f2fd;
     transition: all .7s ease-in-out;
 }
 
