--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -12,7 +12,7 @@
 
 .menu-box
 {
-    height: 98%;
+    height: 100%;
     width: 12%;
     display: flex;
     justify-content: space-between;
@@ -22,38 +22,19 @@
 
 .top
 {
-    height: 20%;
+    height: 10%;
     width: 98%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1.3em;
-    
-
 }
 
-.menu
+.top .logo
 {
-    height: 40%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-.menu button
-{
-    width: 90%;
-    height: 90%;
-    background-color: rgba(255, 255, 255, 0.7);
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-    font-size: 70%;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.3em;
+    justify-content: start;
+    height: 50%;
+    width: 80%;
 }
 
 .menu button:hover
@@ -64,12 +45,11 @@
 
 .middle
 {
-    width: 100%;
+    width: 98%;
     height: 80%;
-    border-radius: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     align-items: center;
     background-color: inherit;
 }
@@ -78,13 +58,23 @@
 {
     font-size: 100%;
 }
+
+.bottom
+{
+    width: 98%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .bottom button
 {
-    width: 90%;
-    height: 95%;
+    width: 80%;
+    height: 70%;
     background-color: rgba(255, 255, 255, 0.7);
     border: none;
-    font-size: 60%;
+    font-size: 70%;
     border-radius: 5px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     cursor: pointer;
@@ -116,7 +106,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: center;
 }
 
 .searchNav .search
@@ -147,7 +137,7 @@
 
 .profile button
 {
-    height: 70%;
+    height: 80%;
     width: 45%;
     border-radius: 5px;
     border: #00e676;
@@ -182,7 +172,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 5px;
 }
 
 .circle .icon
@@ -244,40 +233,25 @@
     width: 100%;
     height: 93%;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 5px 0;
 }
 
-::-webkit-scrollbar {
-    width: 12px;
-    
-  }
+.tasks::-webkit-scrollbar 
+{
+    width: 8px;
+}
   
-  .tasks::-webkit-scrollbar-track {
-    background: #f0f0f0;
-    border-radius: 10px;
-  }
+.tasks::-webkit-scrollbar-track 
+{
+    background: grey;
+}
   
-  .tasks::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 10px;
-    border: 3px solid #f0f0f0;
-  }
+.tasks::-webkit-scrollbar-thumb 
+{
+    background:  #e3f2fd;
+}
   
-  .tasks::-webkit-scrollbar-thumb:hover {
-    background-color: #e70606;
-  }
-  
-  /* For Firefox */
-  .tasks {
-    scrollbar-width: thin;
-    scrollbar-color: #888 #f0f0f0;
-  }
-  
-  /* For Internet Explorer and Edge */
-  .tasks {
-    -ms-overflow-style: -ms-autohiding-scrollbar;
-  }
-
 
 .completed
 {
@@ -329,7 +303,7 @@
         gap: 0.3em;
         justify-content: space-between;
         height: 70%;
-        width: 50%;
+        width: 25%;
     }
 
     .top .logo
@@ -338,6 +312,7 @@
         width: 50%;
         justify-content: start;
         padding-left: 0;
+        font-size: auto;
     }
     .menu
     {
@@ -347,20 +322,26 @@
 
     .menu button 
     {
-        font-size: 50%;
+        font-size: auto;
     }
     .middle
     {
         flex-direction: row;
-        background-color: blue;
+        justify-content: center;
         width: 30%;
         height: 70%;
+        font-size: auto;
     }
 
     .bottom
     {
         width: 20%;
         height: 70%;
+    }
+
+    .bottom button 
+    {
+        font-size: auto;
     }
 
     .to-do-box
@@ -390,13 +371,18 @@
     {
         height: 90%;
         width: 40%;
-        font-size: 60%;
+        font-size: auto;
     }
 
     .circle
     {
         width: 25px;
         height: 25px;
+    }
+
+    span 
+    {
+        font-size: auto;
     }
 
 
