--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -3,7 +3,6 @@
 {
     display: flex;
     flex-direction: column;
-    /* gap: 0.6em; */
     width: 100%;
     height: 100%;
     justify-content: center;
@@ -37,7 +36,7 @@
 .display-sign-content
 {
     width: 100%;
-    height: 90%;
+    height: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -144,6 +143,49 @@ span
     align-items: center;
 }
 
+footer
+{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.3em;
+
+}
+
+.social-icons
+{
+    width: 100%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.7em;
+    border-bottom: 1px solid black;
+    color: #9d8f16;
+    font-size: 16px;
+}
+
+.social:hover
+{
+  color: #e3f2fd;
+  transition: all .7s ease-in-out;
+}
+
+.developer
+{
+  width: 100%;
+  height: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-size: 80%;
+  gap: 0.3em;
+}
+
 
 
 
@@ -166,6 +208,8 @@ span
     width: 95%;
     height: 40%;
     align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 
   .welcome-message p
@@ -188,7 +232,7 @@ span
 
   .login-box
   {
-    height: 40%;
+    height: 55%;
     width: 100%;
   }
 
@@ -205,10 +249,10 @@ span
   }
 
   .signIn-form
-{
-    height: 100%;
-    width: 100%;
-}
+  {
+      height: 100%;
+      width: 100%;
+  }
 
 
   
