--- a/src/components/UserPopup.css
+++ b/src/components/UserPopup.css
@@ -10,19 +10,20 @@
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: end;
-    align-items: center;
+    /* align-items: center; */
 }
   
 .popup-content 
 {
     background: #eceff1;
-    height: 90vh;
-    width: 40vh;
+    height: 60vh;
+    width: 30vh;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
     right: 10px;
+    top: 10px;
 }
   
 .popup-content button 
