--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,8 @@ body
 .App
 {
   background-color: rgba(255, 255, 255, 0.7);
-  border: 2px solid rgba(255, 255, 255, 0.7);
+  border: rgba(255, 255, 255, 0.7);
   border-radius: 20px;
-  /* box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5); */
   height: 96vh;
   display: flex;
   justify-content: center;
@@ -21,7 +20,7 @@ body
 
 ::-webkit-scrollbar 
   {
-    width: 8,
+    width: 8px,
   }
           
   ::-webkit-scrollbar-track 
@@ -43,11 +42,3 @@ main
   align-items: center;
 }
 
-@media only screen and (max-width: 740px)
-{
-  main
-  {
-    justify-content: start;
-    align-items: start;
-  }
-}
