--- a/src/components/UserPopup.css
+++ b/src/components/UserPopup.css
@@ -50,6 +50,65 @@
     background-color: #cfd8dc;
     transition: all .5s ease-in-out;
 }
+
+/* userpopup.css */
+.user-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .user-popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    position: relative;
+  }
+  
+  .close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .form-field {
+    margin-bottom: 15px;
+  }
+  
+  .form-field label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  .form-field input[type="text"],
+  .form-field input[type="password"] {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+  }
+  
+  .form-field input[type="file"] {
+    padding: 8px;
+  }
+  
+  .preview {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin-top: 10px;
+    border-radius: 50%;
+  }
+  
   
 
 @media only screen and (max-width: 740px) 
