--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -5,9 +5,11 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 9px;
+    padding-bottom: 0;
+    background-color: inherit;
 }
 
 .logo
@@ -36,7 +38,7 @@
 .display-sign-content
 {
     width: 100%;
-    height: 80%;
+    height: 82%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -146,13 +148,13 @@ span
 footer
 {
     width: 100%;
-    height: 10%;
+    height: 8%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 0.3em;
-
+    background-color: inherit;
 }
 
 .social-icons
@@ -165,7 +167,7 @@ footer
     gap: 1.7em;
     border-bottom: 1px solid black;
     color: #9d8f16;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .social:hover
@@ -183,7 +185,7 @@ footer
   align-items: center;
   color: black;
   font-size: 80%;
-  gap: 0.3em;
+  /* gap: 0.3em; */
 }
 
 
