--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -400,7 +400,7 @@ label
 .task-info p
 {
     border: 1px solid whitesmoke;
-    height: 50%;
+    height: auto;
     width: 100%;
     border-radius: 5px;
     display: flex;
