--- a/src/components/UserPopup.css
+++ b/src/components/UserPopup.css
@@ -1,58 +1,8 @@
-/* UserPopup.css */
 
-.popup-overlay 
-{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: end;
-    /* align-items: center; */
-}
-  
-.popup-content 
-{
-    background: #eceff1;
-    height: 60vh;
-    width: 30vh;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    position: relative;
-    right: 10px;
-    top: 10px;
-}
-  
-.popup-content button 
-{
-    position: absolute;
-    top: 2px;
-    right: 2px;
-    background-color: #eceff1;
-    border: none;
-    border-radius: 50%;
-    width: 28px;
-    height: 28px;
-    color: red;
-    cursor: pointer;
-    font-size: 25px;
-    transform: rotate(45deg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.popup-content button:hover 
-{
-    background-color: #cfd8dc;
-    transition: all .5s ease-in-out;
-}
 
 /* userpopup.css */
-.user-popup {
+.user-popup 
+{
     position: fixed;
     top: 0;
     left: 0;
@@ -64,14 +14,16 @@
     align-items: center;
   }
   
-  .user-popup-content {
-    background: white;
+  .user-popup-content 
+  {
+    background: lightblue;
     padding: 20px;
     border-radius: 5px;
     position: relative;
   }
   
-  .close-button {
+  .close-button 
+  {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -81,32 +33,57 @@
     cursor: pointer;
   }
   
-  .form-field {
+  .form-field 
+  {
     margin-bottom: 15px;
   }
   
-  .form-field label {
+  .form-field label 
+  {
     display: block;
+    text-align: left;
     margin-bottom: 5px;
+    padding-left: 5px;
   }
   
   .form-field input[type="text"],
-  .form-field input[type="password"] {
+  .form-field input[type="password"],
+  .form-field input[type="tel"]
+  {
     width: 100%;
     padding: 8px;
+    border-radius: 5px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.7);
     box-sizing: border-box;
+    border: none;
+    cursor: pointer;
   }
   
-  .form-field input[type="file"] {
+  .form-field input[type="file"] 
+  {
     padding: 8px;
+    padding-left: 0;
+    cursor: pointer;
   }
   
-  .preview {
+  .preview 
+  {
     width: 100px;
     height: 100px;
     object-fit: cover;
     margin-top: 10px;
     border-radius: 50%;
+  }
+
+  form button
+  {
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 3px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
   }
   
   
