--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -18,8 +18,22 @@
     height: 10%;
     display: flex;
     align-items: center;
-    justify-content: start;
-    padding-left: 20px;
+    justify-content: space-between;
+    /* padding:0 20px; */
+}
+
+.logo button
+{
+  /* width: 70px; */
+  font-size: 16px;
+  font-weight: bold;
+    border: 2px solid rgba(255, 255, 255, 0.7);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .logo .icon
