--- a/src/components/UserPopup.css
+++ b/src/components/UserPopup.css
@@ -25,8 +25,21 @@
   .close-button 
   {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 3px;
+    right: 13px;
+    background: none;
+    border: none;
+    font-size:35px;
+    cursor: pointer;
+    color: red;
+    transform: rotate(45deg);
+  }
+
+  .delete-button 
+  {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
     background: none;
     border: none;
     font-size: 20px;
@@ -44,6 +57,7 @@
     text-align: left;
     margin-bottom: 5px;
     padding-left: 5px;
+    color: hsl(0, 0%, 100%);
   }
   
   .form-field input[type="text"],
@@ -63,8 +77,13 @@
   .form-field input[type="file"] 
   {
     padding: 8px;
-    padding-left: 0;
+    /* padding-left: 0; */
+    width: 96%;
+    border-radius: 5px;
     cursor: pointer;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    /* background-color: rgba(255, 255, 255, 0.7); */
+    color: #fff;
   }
   
   .preview 
@@ -78,12 +97,14 @@
 
   form button
   {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: inherit;
     border-radius: 3px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
     border: none;
-    font-size: 1rem;
+    font-size: .8rem;
     cursor: pointer;
+    padding: 7px 15px;
+    color: #fff;
   }
   
   
