--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -325,7 +325,7 @@ label
 
 .task-button button
 {
-    width: 100%;
+    width: 70%;
     height: 90%;
     border: none;
     cursor: pointer;
@@ -334,8 +334,10 @@ label
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
-    background-color: inherit;
+    background-color: rgb(5, 194, 5);
     font-size: 80%;
+    /* color: black; */
+    font-weight: bold;
 }
 
 .task-button button:hover
@@ -352,6 +354,7 @@ label
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding: 0 7px;
     gap: 0.5em;
     background-color: rgba(255, 255, 255, 0.7);
     overflow: hidden;
@@ -372,6 +375,8 @@ label
 .title .icon
 {
     font-size: 18px;
+    font-weight: bold;
+    color: green;
 }
 
 .tasks
@@ -505,11 +510,11 @@ label
 
 .pending .title
 {
-    background-color: #2196f3;
-    border: 2px solid #2196f3;
+    background-color: lightblue;
+    border: 2px solid lightblue;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    color: #fff;
+    color: black;
 }
 
 
