--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -24,7 +24,7 @@
 
 .logo button
 {
-  /* width: 70px; */
+  width: 70px;
   font-size: 16px;
   font-weight: bold;
     border: 2px solid rgba(255, 255, 255, 0.7);
@@ -120,12 +120,12 @@ span
     height:65%;
     width: 30%;
     font-weight: bold;
-    border: 2px solid rgba(255, 255, 255, 0.7);
+    border: 2px solid lightblue;
     border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: lightblue;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     gap: 0.5em;
 }
@@ -180,13 +180,13 @@ footer
     align-items: center;
     gap: 1.7em;
     border-bottom: 1px solid black;
-    color: #9d8f16;
+    color: black;
     font-size: 14px;
 }
 
 .social:hover
 {
-  color: #e3f2fd;
+  color: lightblue;
   transition: all .7s ease-in-out;
 }
 
