--- a/src/components/signUpPopup.css
+++ b/src/components/signUpPopup.css
@@ -46,7 +46,7 @@
 {
     width: 30%;
     height: 17%;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: lightblue;
     border: none;
     border-radius: 7%;
     font-weight: bold;
