--- a/src/components/UserPopup.css
+++ b/src/components/UserPopup.css
@@ -8,7 +8,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,7 +16,7 @@
   
   .user-popup-content 
   {
-    background: lightblue;
+    background: rgba(255, 255, 255, 0.6);
     padding: 20px;
     border-radius: 5px;
     position: relative;
@@ -57,7 +57,8 @@
     text-align: left;
     margin-bottom: 5px;
     padding-left: 5px;
-    color: hsl(0, 0%, 100%);
+    color: black;
+    background: inherit;
   }
   
   .form-field input[type="text"],
@@ -77,12 +78,12 @@
   .form-field input[type="file"] 
   {
     padding: 8px;
-    /* padding-left: 0; */
-    width: 96%;
+    width: 100%;
     border-radius: 5px;
+    border: none;
+    box-sizing: border-box;
     cursor: pointer;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
-    /* background-color: rgba(255, 255, 255, 0.7); */
     color: #fff;
   }
   
