--- a/src/components/signInPopup.css
+++ b/src/components/signInPopup.css
@@ -16,8 +16,9 @@
     height: 15%;
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: center;
     font-weight: bold;
+    font-size: 25px;
 }
 
 .signInPopup form
@@ -44,23 +45,21 @@
 
 .signInPopup button
 {
-    width: 30%;
-    height: 17%;
-    background-color: lightblue;
+    width: 32%;
+    height: 19%;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: rgba(0, 0, 0, 0.1);
     border: none;
     border-radius: 7%;
     font-weight: bold;
+    cursor: pointer;
+    color: black;
 }
 
-.signInPopup button:hover
-{
-    background-color: #e3f2fd;
-    transition: all .7s ease-in-out;
-}
 
 .signInPopup input:focus
 {
-    border-bottom:2px solid #03a9f4;
+    border-bottom:2px solid silver;
     transition: all .2s ease-in-out;
 }
 
@@ -83,5 +82,10 @@
         width: 30%;
         /* height: 19%; */
         font-size: 70%;
+    }
+
+    .signInPopup .title
+    {
+        font-size: 15px;
     }
 }
