--- a/src/components/signUpPopup.css
+++ b/src/components/signUpPopup.css
@@ -18,6 +18,7 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    font-size: 25px;
 }
 
 .signUpPopup form
@@ -44,23 +45,20 @@
 
 .signUpPopup button
 {
-    width: 30%;
-    height: 17%;
-    background-color: lightblue;
+    width: 32%;
+    height: 19%;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: rgba(0, 0, 0, 0.1);
     border: none;
     border-radius: 7%;
     font-weight: bold;
-}
-
-.signUpPopup button:hover
-{
-    background-color: #e3f2fd;
-    transition: all .7s ease-in-out;
+    cursor: pointer;
+    color: black;
 }
 
 .signUpPopup input:focus
 {
-    border-bottom:2px solid #03a9f4;
+    border-bottom:2px solid silver;
     transition: all .2s ease-in-out;
 }
 
@@ -82,5 +80,10 @@
         /* width: 30%; */
         /* height: 19%; */
         font-size: 70%;
+    }
+
+    .signUpPopup .title
+    {
+        font-size: 15px;
     }
 }
